# server

./: map.html
HttpServer/: HttpServer.sln  PieImageServer.sln
HttpServer/HttpServer/: HttpServer.vcxproj  HttpServer.vcxproj.filters  buffer.h  common.cpp  common.h  compress.h  compress_interface.cpp  compress_interface.h  coordinate_transformation.cpp  coordinate_transformation.h  data_processor.cpp  data_processor.h  dataset.h  dataset_factory.cpp  dataset_factory.h  dataset_interface.cpp  dataset_interface.h  enums.cpp  enums.h  etcd_storage.cpp  etcd_storage.h  handle_result.cpp  handle_result.h  handler.cpp  handler.h  handler_mapping.cpp  handler_mapping.h  http_handler.cpp  http_handler.h  http_server.cpp  jpg_buffer.cpp  jpg_compress.cpp  jpg_compress.h  listener.h  main.cpp  max_min_stretch.cpp  max_min_stretch.h  request_processor.cpp  request_processor.h  resource_pool.cpp  (+20 more)
HttpServer/PieImageServer/: CJsonObject.cpp  CMakeLists.txt  Dockerfile  PieImageServer.vcxproj  PieImageServer.vcxproj.filters  amazon_s3.cpp  amazon_s3.h  application.cpp  application.h  benchmark.cpp  benchmark.h  buffer.cpp  buffer.h  buffer_pool.cpp  buffer_pool.h  compress.h  coordinate_transformation.cpp  coordinate_transformation.h  dataset.h  dataset_factory.cpp  docker命令.txt  etcd.txt  etcd_storage.cpp  etcd_storage.h  etcd_v2.cpp  etcd_v2.h  etcd_v3.cpp  etcd_v3.h  file_cache.cpp  file_cache.h  handle_result.h  handler.cpp  handler.h  handler_mapping.cpp  handler_mapping.h  histogram.cpp  histogram.h  histogram_equalize_stretch.cpp  histogram_equalize_stretch.h  http_handler.cpp  (+64 more)
HttpServer/apps3/: CMakeLists.txt  Dockerfile  apps3.cpp  aws-lambda环境.txt  dataset.h  histogram.cpp  histogram.h  jpg_compress.cpp  jpg_compress.h  lambda参数说明.txt  resource_pool.cpp  resource_pool.h  s3_dataset.cpp  s3_dataset.h  task_record.cpp  task_record.h  tiff_dataset.cpp  tiff_dataset.h  type_def.cpp  type_def.h
